[Ubuntu] Mozilla crash reporter panel’s width is infinite extended if the user types a comment with no space
Categories
(Toolkit :: Crash Reporting, defect, P3)
Tracking
()
People
(Reporter: asoncutean, Assigned: spiro)
Details
(Whiteboard: [testday-20190412])
Attachments
(2 files)
[Affected versions]:
- 60.5.0esr - 20190121141556
- 65.0 - 20190121133710
- 66.0b1 dev edition - 20190121133415
- 66.0a1 - 20190122215349
[Affected platforms]:
- Ubuntu 18.04 x64
- Ubuntu 16.04 x86
[Steps to reproduce]:
- Crash the browser
- For latest versions:
Type about:crashparent inside the URL bar - For esr:
a. Go to about:config -> devtools.chrome.enabled (set it to true)
b. Open Scratchpad with Shift + F4.
c. Switch the Environment from Content to Browser.
d. Paste the following inside the browser console:
Cu.import("resource://gre/modules/ctypes.jsm");
let zero = new ctypes.intptr_t(8);
let badptr = ctypes.cast(zero, ctypes.PointerType(ctypes.int32_t));
Badptr.contents;
- Write any characters (no space) inside the Mozilla Crash Reporter panel until the default width of the panel is crossed
[Expected result]:
- Once the default width of the panel is reached, the following typing characters are passed on the second row.
[Actual result]:
- The panel width extent infinite as new characters are continued to be typed.
[Regression range]:
- I will provide more information asap.
Updated•6 years ago
|
Updated•6 years ago
|
| Reporter | ||
Comment 1•6 years ago
|
||
This issue doesn't seem to be a regression, I could reproduce it way back to Fx 31.0a1.
Updated•6 years ago
|
| Assignee | ||
Comment 2•6 years ago
|
||
Bug 1522078 - Changed wrap-mode of GtkTextView widget to GTK_WRAP_CHAR.
| Assignee | ||
Comment 3•6 years ago
|
||
I wasn't able to tag Anca and Anthony to commit push on phabricator. Instead I added gsvelto. You can also review it.
Gabriele can land it.
Comment 8•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
Comment 9•6 years ago
|
||
I can reproduce this issue with Nightly 66.0a1 (2019-01-23) in Arch Linux (x86_64) following STR from comment 0.
I can verify that this issue is no longer reproducible in latest Firefox Beta 67.0b10 (64-bit), width of crash reporter window does not increase anymore.
Build ID 20190411084603
User Agent Mozilla/5.0 (X11; Linux x86_64; rv:67.0) Gecko/20100101 Firefox/67.0
Description
•