Bug 1522078 - Changed wrap-mode of GtkTextView widget to GTK_WRAP_CHAR. r=gsvelto

Bug 1522078 - Changed wrap-mode of GtkTextView widget to GTK_WRAP_CHAR.

Differential Revision: https://phabricator.services.mozilla.com/D18512